# external-dns

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yaml  external-dns.py  pyproject.toml  renovate.json
.github/workflows/: ci.yml  docker.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0.0-ROADMAP.md
.planning/phases/01-testing-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/phases/02-error-handling/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md
.planning/phases/03-documentation-release/: 03-01-PLAN.md  03-01-SUMMARY.md
.serena/: project.yml
docker/config/: config.yaml.template
docker/local/adguard/conf.example/: AdGuardHome.yaml
docker/local/external-dns/config/: config.yaml
src/external_dns/: cli.py
tests/: test_adguard_provider.py  test_config_watch.py  test_state_store.py  test_syncer.py  test_traefik_provider.py  test_utils.py
tests/integration/: test_docker_stack.py
